[gd_scene load_steps=11 format=3 uid="uid://dpl20eb6x6t14"]

[ext_resource type="Script" uid="uid://dvockkcnjdenb" path="res://Scripts/game.gd" id="1_3dryh"]
[ext_resource type="PackedScene" uid="uid://jhho1u3orutm" path="res://Scenes/level.tscn" id="1_ebmjs"]
[ext_resource type="PackedScene" uid="uid://cx1y1p4ehilni" path="res://Scenes/player_mech.tscn" id="2_qxrlw"]
[ext_resource type="Resource" uid="uid://m2sjqkxfifmj" path="res://Scripts/Player_1_controls.tres" id="4_i6g32"]
[ext_resource type="Resource" uid="uid://djbf4ibjvpqxp" path="res://Scripts/Player_2_controls.tres" id="5_1l0tm"]
[ext_resource type="PackedScene" uid="uid://ftl8f5x5g86g" path="res://Scenes/player_ui.tscn" id="5_i6g32"]
[ext_resource type="PackedScene" uid="uid://bdvtjucvrr360" path="res://Scenes/life_meter.tscn" id="8_ldgsr"]
[ext_resource type="PackedScene" uid="uid://dx11aqaggxpxn" path="res://Scenes/wp_machinegun.tscn" id="8_rfjv2"]
[ext_resource type="Script" uid="uid://ce6011hj5sy22" path="res://Scripts/The_game_music.gd" id="10_ldgsr"]
[ext_resource type="AudioStream" uid="uid://dqlm06ws6kp05" path="res://Audio/Lazer (RT 6.0)/Synthwave Lazer Intensity 1.wav" id="11_rku1e"]

[node name="Game" type="Control" node_paths=PackedStringArray("player_1", "player_2")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3dryh")
player_1 = NodePath("HBoxContainer/Player_1/player_1_view/Player_1")
player_2 = NodePath("HBoxContainer/Player_2/player_2_view/Player_2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_constants/separation = 4

[node name="Player_1" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="player_1_view" type="SubViewport" parent="HBoxContainer/Player_1"]
handle_input_locally = false
msaa_2d = 3
msaa_3d = 3
screen_space_aa = 2
canvas_item_default_texture_filter = 0
size = Vector2i(636, 720)
render_target_update_mode = 4

[node name="level" parent="HBoxContainer/Player_1/player_1_view" instance=ExtResource("1_ebmjs")]
z_index = -1
position = Vector2(480, 275)

[node name="Player_1" parent="HBoxContainer/Player_1/player_1_view" instance=ExtResource("2_qxrlw")]
position = Vector2(221, 529)
Controls = ExtResource("4_i6g32")
player_name = "Player_1"
chosen_weapons = [ExtResource("8_rfjv2"), ExtResource("8_rfjv2"), ExtResource("8_rfjv2"), ExtResource("8_rfjv2")]

[node name="Player_2" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="player_2_view" type="SubViewport" parent="HBoxContainer/Player_2"]
handle_input_locally = false
msaa_2d = 3
msaa_3d = 3
screen_space_aa = 2
canvas_item_default_texture_filter = 0
oversampling_override = 4.0
size = Vector2i(640, 720)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Player_2" parent="HBoxContainer/Player_2/player_2_view" instance=ExtResource("2_qxrlw")]
position = Vector2(327, 529)
Controls = ExtResource("5_1l0tm")
player_name = "Player_2"
player_device = 1
chosen_weapons = [ExtResource("8_rfjv2"), ExtResource("8_rfjv2"), ExtResource("8_rfjv2"), ExtResource("8_rfjv2")]

[node name="PLAYER_UI" parent="." node_paths=PackedStringArray("Observed_player", "locked_on_player") instance=ExtResource("5_i6g32")]
layout_mode = 0
anchors_preset = 0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 546.0
offset_bottom = 1266.0
Observed_player = NodePath("../HBoxContainer/Player_1/player_1_view/Player_1")
locked_on_player = NodePath("../HBoxContainer/Player_2/player_2_view/Player_2")

[node name="PLAYER_UI2" parent="." node_paths=PackedStringArray("Observed_player", "locked_on_player") instance=ExtResource("5_i6g32")]
layout_mode = 0
anchors_preset = 0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 640.0
offset_top = 546.0
offset_right = 640.0
offset_bottom = 1266.0
Observed_player = NodePath("../HBoxContainer/Player_2/player_2_view/Player_2")
locked_on_player = NodePath("../HBoxContainer/Player_1/player_1_view/Player_1")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 636.7123
offset_top = -0.1439209
offset_right = 644.7123
offset_bottom = 719.8561
color = Color(0.25490198, 0.23921569, 0.25882354, 1)

[node name="life_meter" parent="." instance=ExtResource("8_ldgsr")]
position = Vector2(616, 478)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_rku1e")
autoplay = true
bus = &"Music"
script = ExtResource("10_ldgsr")
